--- a/package.json
+++ b/package.json
@@ -35,29 +35,5 @@
     "webpack": "^4.33.0",
     "webpack-node-externals": "^1.7.2"
   },
-  "license": "ISC",
-  "jest": {
-    "verbose": true,
-    "testRegex": "/test/.*\\.(test|spec)\\.(ts|tsx|js|jsx)$",
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/.webpack/"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!**/logger.js",
-      "!**/mongo-config.js",
-      "!**/repo/**"
-    ],
-    "testEnvironment": "node"
-  }
+  "license": "ISC"
 }
