--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "apollo-server-express": "^2.9.3",
-    "express": "^4.17.1",
+    "apollo-server-lambda": "^2.9.3",
     "graphql": "^14.5.4",
-    "graphql-playground-middleware-express": "^1.7.12",
-    "node-fetch": "^2.6.0",
-    "serverless-http": "^2.3.0"
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
