--- a/serverless.yaml
+++ b/serverless.yaml
@@ -21,11 +21,5 @@ functions:
     events:
       - http:
           path: graphql
-          method: post
+          method: any
           cors: true
-  playground:
-    handler: src/index.handler
-    events:
-      - http:
-          path: playground
-          method: get
